client/src/screens/ProductDetail/ProductDetail.css
.box-product-detail {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.edit-button {
    text-decoration: none;
    color: inherit;
}

.edit-button:visited {
    text-decoration: none;
    color: inherit;
}
.card-container-product-detail {
    width: 90%;
}

.product-detail-image-container {
    display: flex;
    justify-content: center;
    width: 100%;
    overflow: hidden;
}

.back {
    padding: 10px 0;
    float: left;
}

.product-detail-image {
    transition: transform .2s;
}

.product-detail-image:hover {
    transform: scale(1.1);
}

.product-detail-info {
    margin: 0 auto;
}

.product-detail-description {
    font-size: 16px;
}
.backDiv {
    width: 90%;
}

/* xm */
@media screen and (max-width: 576px){
    .product-detail-image {
    width: 70%;
}
    .product-detail-info {
    width: 85%;
}
}

/* sm */
@media screen and (min-width: 576px){
    .product-detail-image {
    width: 65%;
}
    .product-detail-info {
    width: 85%;
}
}

/* md */
@media screen and (min-width: 768px){
    .card-container-product-detail {
    width: 80%;
}
    .backDiv {
    width: 80%;
}
    .product-detail-info {
    width: 80%;
}
    .product-detail-image {
    width: 65%;
}
}

/* lg */
@media screen and (min-width: 992px){
    .card-container-product-detail {
    width: 75%;
}
    .backDiv {
    width: 75%;
}
    .product-detail-info {
    width: 80%;
}
    .product-detail-image {
    width: 60%;
}
}

/* xl */
@media screen and (min-width: 1200px){
    .card-container-product-detail {
    width: 70%;
}
    .backDiv {
    width: 70%;
}
    .product-detail-info {
    width: 75%;
}
    .product-detail-image {
    width: 55%;
}
}

